examples/test/testpolicy7235.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7235
  namespace: namespace408
spec:
  podSelector:
    matchLabels:
      key0: value3
      key31: value45
      key49: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value25
          key9: value31
          key34: value18
      podSelector:
        matchLabels:
          key19: value2
          key20: value25
